# sharepoint-genie

react-agent/: api.py  context_store.py  main.py  pyproject.toml  requirements.txt
react-agent/agent/: graph.py  nodes.py
react-agent/faiss_index/: index.faiss  index.pkl
react-agent/services/: acquire_token.py  sharepoint_client.py  site_info.py
react-agent/tools/: react.py
react-agent/utils/: output_parsers.py
spfx-sharepoint-genie/: gulpfile.js  package-lock.json  package.json  prod.config.json
spfx-sharepoint-genie/config/: serve.json
spfx-sharepoint-genie/sharepoint/assets/: elements.xml
spfx-sharepoint-genie/sharepoint/solution/: sidebar-agent.sppkg
spfx-sharepoint-genie/sharepoint/solution/debug/: AppManifest.xml  ClientSideAssets.xml  ClientSideAssets.xml.config.xml  feature_f757a2ed-fea6-4478-abd2-080c4a1f6a84.xml  feature_f757a2ed-fea6-4478-abd2-080c4a1f6a84.xml.config.xml
spfx-sharepoint-genie/sharepoint/solution/debug/ClientSideAssets/: sidebar-agent-application-customizer.js  sidebar-agent-application-customizer_bea0dab80b87fa368600.js  sidebar-agent-application-customizer_bea0dab80b87fa368600.js.LICENSE.txt
spfx-sharepoint-genie/sharepoint/solution/debug/_rels/: AppManifest.xml.rels  ClientSideAssets.xml.rels  feature_f757a2ed-fea6-4478-abd2-080c4a1f6a84.xml.rels
spfx-sharepoint-genie/sharepoint/solution/debug/f757a2ed-fea6-4478-abd2-080c4a1f6a84/: ClientSideInstance.xml  Extension_4c6e29f2-7eee-4f9f-bbd2-20c8859d0ba2.xml  elements.xml
spfx-sharepoint-genie/src/extensions/sidebarAgent/: SidebarAgentApplicationCustomizer.tsx
(+8 files in other folders)
